add_executable(index_cube test_index_cube.cpp)

add_executable(search_cube test_search_cube.cpp)

add_executable(link_adjacent_cube test_link_adjacent_cube.cpp)

add_executable(cross_cube_search test_cross_cube_search.cpp)

add_executable(bench_cube_index bench_cube_index.cpp)

add_executable(bench_hierarchical_cube bench_hierarchical_cube.cpp)

