add_executable(index_cube test_index_cube.cpp)

add_executable(search_cube test_search_cube.cpp)

add_executable(link_adjacent_cube test_link_adjacent_cube.cpp)

add_executable(cross_cube_search test_cross_cube_search.cpp)

add_executable(bench_hierarchical_cube bench_hierarchical_cube.cpp)

add_executable(bench_hierarchical_ball bench_hierarchical_ball.cpp)

add_executable(bench_post_filtering bench_post_filtering.cpp)

add_executable(test_predetermined_search test_predetermined_search.cpp)
